--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Romanticism -- France'
 - !lcsh 'Gautier, Théophile, 1811-1872'
+- GITenberg
 title: L'Impeccable Théophile Gautier et les sacrilèges romantiques
 url: http://www.gutenberg.org/ebooks/41578
